--- a/scripts/package.json
+++ b/scripts/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.830.0",
     "axios": "^1.10.0",
+    "dotenv": "^16.5.0",
     "fs-extra": "^11.3.0",
     "playwright": "^1.53.0"
   }
